Se agrega JavaScript al home page

--- a/Frontend/Angular/FrontendPedidos/src/index.html
+++ b/Frontend/Angular/FrontendPedidos/src/index.html
@@ -21,7 +21,8 @@
   <!-- Materalize.css SLIDER-->
   <link rel="stylesheet" href= "https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
 
-  <link rel="stylesheet" href="">  <!-- para hacer la conexion con estilos.css -->
+  <link rel="stylesheet" href="assets/css/inicio.component.css">  <!-- para hacer la conexion con estilos.css -->
+  
   <title>Pilot PC</title> <!--titulo que va dentro de la pestaña del navegador, lo que google usa para identificar las busquedas  -->
   <script src="https://kit.fontawesome.com/0db1539af8.js" crossorigin="anonymous"></script>
   <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css" />
@@ -32,7 +33,9 @@
 
     <body>
       <app-root> </app-root>
+
       <!--JavaScript at end of body for optimized loading-->
       <script type="text/javascript" src="node_modules/materialize-css/dist/js/materialize.min.js"></script>
+      <script type="text/javascript" src="assets/js/ProductosSlider.js"></script>
     </body>
   </html>
