--- a/Frontend/Angular/FrontendPedidos/src/index.html
+++ b/Frontend/Angular/FrontendPedidos/src/index.html
@@ -7,6 +7,7 @@
       <!--Import materialize.css-->
       <link type="text/css" rel="stylesheet" href="node_modules/materialize-css/dist/css/materialize.min.css"  media="screen,projection"/>
       <link rel="stylesheet" href="inicio.component.css">
+      <link rel="stylesheet" href="identificacion.component.css">
       
       <base href="/"/>
       <!--Let browser know website is optimized for mobile-->
