--- a/Frontend/Angular/FrontendPedidos/src/index.html
+++ b/Frontend/Angular/FrontendPedidos/src/index.html
@@ -38,5 +38,6 @@
       <!--JavaScript at end of body for optimized loading-->
       <script type="text/javascript" src="node_modules/materialize-css/dist/js/materialize.min.js"></script>
       <script type="text/javascript" src="assets/js/ProductosSlider.js"></script>
+      <script type="text/javascript" src="assets/js/identificacion.js"></script>
     </body>
   </html>
