Se modifica CSS de CRUD productos y reCaptcha

--- a/Frontend/Angular/FrontendPedidos/src/index.html
+++ b/Frontend/Angular/FrontendPedidos/src/index.html
@@ -22,7 +22,7 @@
   <!-- Materalize.css SLIDER-->
   <link rel="stylesheet" href= "https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
 
-  <link rel="stylesheet" href="assets/css/inicio.component.css">  <!-- para hacer la conexion con estilos.css -->
+  <!-- <link rel="stylesheet" href="assets/css/inicio.component.css">   para hacer la conexion con estilos.css -->
   
   <title>Pilot PC</title> <!--titulo que va dentro de la pestaña del navegador, lo que google usa para identificar las busquedas  -->
   <script src="https://kit.fontawesome.com/0db1539af8.js" crossorigin="anonymous"></script>
